fix overflow, change min height for mobile

--- a/src/app/what-i-do/what-i-do.component.css
+++ b/src/app/what-i-do/what-i-do.component.css
@@ -27,3 +27,39 @@
 .btn-default{
     margin-top:10px;
 }
+
+/* Landscape */
+@media screen 
+and (max-width: 640px) 
+and (max-height: 360px) 
+and (orientation: landscape) {
+   
+    .color-1{
+        min-height: 0;
+    }
+    .color-2{
+        min-height: 0;
+    }
+    .color-3{
+        min-height: 0;
+    }
+    
+}
+
+/* portriat */
+@media screen 
+and (max-width: 360px) 
+and (max-height: 640px) 
+and (orientation: portrait) {
+    .color-1{
+        min-height: 0;
+    }
+    .color-2{
+        min-height: 0;
+    }
+    .color-3{
+        min-height: 0;
+    }
+    
+
+}
