--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 body{
     overflow-x: hidden;
 }
+
+.hide-overflow{
+    overflow-x: hidden;
+}
